<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kazi Plus</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_about">About Kazi Plus</string>
    <string name="kaziplus_label">Kazi Plus</string>
    <string name="signin">Sign in</string>
    <string name="signup">Signup</string>
    <string name="already_have_account">Alreay have an account?</string>
    <string name="sign_in">Sign in!</string>
    <string name="title_activity_signup">Signup for Kazi+</string>
    <string name="action_logout">Logout</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="label_create_account">Create Account</string>
    <string name="title_activity_signin">Sign in to Kazi+</string>
    <string name="title_activity_dashboard">Time Sheet Dashboard</string>
    <string name="title_activity_projects">Projects</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_tasks">Tasks</string>
    <string name="title_activity_taks_done">Tasks Done</string>
    <string name="hint_project_name">Project name</string>
    <string name="hint_start_date">Start date</string>
    <string name="hint_end_date">End date</string>
    <string name="hint_add_project">Add Project</string>
    <string name="add_task">Add Task</string>
    <string name="time_taken">Time taken</string>
    <string name="date_done">Date done</string>
    <string name="comments">Comments</string>
    <string name="select_project_name">Select project name</string>
    <string name="task_name">Task name</string>
    <string name="database_upgrade">Database Upgrade</string>
    

</resources>
