<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kaziplus.kaziplus.MainActivity" >

    <TextView
        android:id="@+id/label_kaziplus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="172dp"
        android:text="@string/kaziplus_label"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#005500"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="70dp"
        android:background="@drawable/button_background"
        android:text="@string/signup"
        android:textColor="#ffffff"
        android:textStyle="bold" 
        android:onClick="createAccount"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="21dp"
        android:text="@string/already_have_account"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/textView1"
        android:text="@string/sign_in"
        android:textColor="#0000ff"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:clickable="true"
        android:onClick="signIn" />

</RelativeLayout>